Fixed font size display issue on Safari

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -34,6 +34,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  -webkit-text-size-adjust: 100%;
 }
 
 body {
@@ -54,6 +55,7 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  font-size: inherit;
 }
 
 .app {
